--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p style='text-align: justify;'>{{ site.description | default: site.github.project_tagline }}</p>
+        <p style='text-align: center; font-size: medium;'>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p style='text-align: justify;'>{{ site.school | default: site.github.project_tagline }}</p>
+        <p style='text-align: center;'>{{ site.school | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
