--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,9 @@
         {% endif %}
 
         {% if site.location %}
-        <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
+        <div itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
           <i class="fas fa-fw fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span>
-        </li>
+        </div>
         {% endif %}
 
         {% if site.show_downloads %}
