--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
 
         <p style='text-align: center;'>{{ site.school | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_user_page %}
+        <!--{% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        {% endif %}-->
 
         <div class="author__urls-wrapper">
           
