--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,9 @@
         <div class="author__urls-wrapper">
           
           <ul class="author__urls social-icons">
-            {% if author.location %}
+            {% if site.location %}
               <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
-                <i class="fas fa-fw fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ author.location }}</span>
+                <i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span>
               </li>
             {% endif %}
       
