--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}-->
 
+        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+
         <div class="author__urls-wrapper">
           
           <ul class="author__urls social-icons">
