--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="fontawesome-free-5.15.2-web/css/fontawesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!--<link href="fontawesome-free-5.15.2-web/css/fontawesome.min.css" rel="stylesheet">-->
 
 
 {% seo %}
@@ -32,6 +34,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}-->
 
+        <a class="btn_social"><i class="fab fa-twitter"></i></a>
         <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
 
         <div class="author__urls-wrapper">
