--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!--<link href="fontawesome-free-5.15.2-web/css/fontawesome.min.css" rel="stylesheet">-->
 
 
 {% seo %}
@@ -34,22 +33,17 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}-->
 
-        <a class="btn_social"><i class="fab fa-twitter"></i></a>
-        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
 
         <div class="author__urls-wrapper">
-          
           <ul class="author__urls social-icons">
             {% if site.location %}
-              <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
-                <i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span>
-              </li>
+              <i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span>
             {% endif %}
       
             {% if site.links %}
               {% for link in site.links %}
                 {% if link.label and link.url %}
-                  <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a></li>
+                  <a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a>
                 {% endif %}
               {% endfor %}
             {% endif %}
