--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,13 +37,13 @@
         <div class="author__urls-wrapper">
           <ul class="author__urls social-icons">
             {% if site.location %}
-              <i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span>
+              <i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span><br>
             {% endif %}
       
             {% if site.links %}
               {% for link in site.links %}
                 {% if link.label and link.url %}
-                  <a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a>
+                  <a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a><br>
                 {% endif %}
               {% endfor %}
             {% endif %}
