--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p style='text-align: center; font-size: medium;'>{{ site.description | default: site.github.project_tagline }}</p>
+        <p style='text-align: center; font-size: medium; margin-top: 30px;'>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p style='text-align: center;'>{{ site.school | default: site.github.project_tagline }}</p>
 
