--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         {% endif %}-->
 
 
-        <div class="author__urls-wrapper">
+        <div style="margin-left:45px;" class="author__urls-wrapper">
             {% if site.location %}
               <i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ site.location }}</span><br>
             {% endif %}
