--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 
@@ -25,7 +25,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p style="text-align: center; font-size: medium; margin-top: 30px; font-weight: bold; font-family: 'Tangerine', serif;">{{ site.description | default: site.github.project_tagline }}</p>
+        <p style="text-align: center; font-size: medium; margin-top: 30px; font-weight: bold; font-family: 'Yanone Kaffeesatz', sans-serif;">{{ site.description | default: site.github.project_tagline }}</p>
 
         <p style='text-align: center;'>{{ site.school | default: site.github.project_tagline }}</p>
 
