--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -4,7 +4,7 @@
 body {
   background-color: #fff;
   padding:50px;
-  font: 14px/1.5 'Yanone Kaffeesatz', sans-serif;;
+  font: 14px/1.5 'Abel', sans-serif;
   color:#727272;
   font-weight:400;
 }
@@ -12,6 +12,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
+  font: 'Yanone Kaffeesatz', sans-serif;
 }
 
 p, ul, ol, table, pre, dl {
