--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -114,6 +114,10 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
+.authorlink{
+  margin-left:45px;
+}
+
 ul.downloads {
   list-style:none;
   height:40px;
