--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             {% if site.links %}
               {% for link in site.links %}
                 {% if link.label and link.url %}
-                  <a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a><br>
+                  <a style='text-indent:45px;' href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a><br>
                 {% endif %}
               {% endfor %}
             {% endif %}
