--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
             {% if site.links %}
               {% for link in site.links %}
                 {% if link.label and link.url %}
-                  <i class="{{ link.icon | default: 'fas fa-link' }}"></i> <a href="{{ link.url }}" rel="nofollow noopener noreferrer">{{ link.label }}</a><br>
+                  <a href="{{ link.url }}" rel="nofollow noopener noreferrer"> <i class="{{ link.icon | default: 'fas fa-link' }}"></i> {{ link.label }}</a><br>
                 {% endif %}
               {% endfor %}
             {% endif %}
