--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -27,7 +27,7 @@ h1, h2, h3 {
 h1 {
   font-size:28px;
   text-align:center;
-  font-family: 'Patrick Hand', cursive;
+  font-family: 'Sacramento', cursive;
 }
 
 h2 {
