--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" width="30" height="30" />
         {% endif %}
 
         <p style="text-align: center; font-size: medium; margin-top: 30px; font-weight: bold; font-family: 'Yanone Kaffeesatz', sans-serif; font-size:24px;">{{ site.description | default: site.github.project_tagline }}</p>
