--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -42,6 +42,13 @@ a {
   text-decoration:none;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 a:hover, a:focus {
   color:#069;
   font-weight: bold;
