--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <p style="text-align: center; font-size: medium; margin-top: 30px; font-weight: bold; font-family: 'Yanone Kaffeesatz', sans-serif; font-size:24px;">{{ site.description | default: site.github.project_tagline }}</p>
 
         <p style='text-align: center;'>{{ site.school | default: site.github.project_tagline }}</p>
-        <p style='text-align: center;'>{{ site.school2 | default: site.github.project_tagline }}</p>
+        <p style='text-align: center; margin-top: 0px'>{{ site.school2 | default: site.github.project_tagline }}</p>
 
 
         <!--{% if site.github.is_user_page %}
